--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
             <button id="checkButton">Check</button>
         </div>
         <div id="results" class="results"></div>
+        <div id="alternatives" class="alternatives"></div>
     </div>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
